@@ -50,6 +50,7 @@
 #include "ospfd/ospf_nsm.h"
 #include "ospfd/ospf_flood.h"
 #include "ospfd/ospf_ism.h"
+#include "ospfd/ospf_dump.h"
 
 /* OSPF2-MIB. */
 #define OSPF2MIB 1,3,6,1,2,1,14
@@ -2565,8 +2566,11 @@ void
 ospfTrapNbrStateChange (struct ospf_neighbor *on)
 {
   oid index[sizeof (oid) * (IN_ADDR_SIZE + 1)];
+  char msgbuf[16];
   
-  zlog (NULL, LOG_INFO, "ospfTrapNbrStateChange trap sent");
+  ospf_nbr_state_message(on, msgbuf, sizeof(msgbuf));
+  zlog (NULL, LOG_INFO, "ospfTrapNbrStateChange trap sent: %s now %s",
+	inet_ntoa(on->address.u.prefix4), msgbuf);
 
   oid_copy_addr (index, &(on->address.u.prefix4), IN_ADDR_SIZE);
   index[IN_ADDR_SIZE] = 0;
@@ -2600,7 +2604,9 @@ ospfTrapIfStateChange (struct ospf_interface *oi)
 {
   oid index[sizeof (oid) * (IN_ADDR_SIZE + 1)];
 
-  zlog (NULL, LOG_INFO, "ospfTrapIfStateChange trap sent");
+  zlog (NULL, LOG_INFO, "ospfTrapIfStateChange trap sent: %s now %s",
+  	inet_ntoa(oi->address->u.prefix4),
+	LOOKUP(ospf_ism_state_msg, oi->state));
   
   oid_copy_addr (index, &(oi->address->u.prefix4), IN_ADDR_SIZE);
   index[IN_ADDR_SIZE] = 0;
